ie8 homepage layout bugfix

--- a/src/components/c-featured-news-list/style.ie.styl
+++ b/src/components/c-featured-news-list/style.ie.styl
@@ -3,4 +3,10 @@
 
 .c-featured-news-list {
   ieoldcf();
+  width:100%;
+  float: left;
+  display: block;
+  .c-article-item {
+    width: 45% !important;
+  }
 }
